--- a/demos/BentonSans.html
+++ b/demos/BentonSans.html
@@ -33,6 +33,6 @@
 
 </div>
     
-    <script src='http://registry.origami.ft.com/embedapi?autoload=resize'></script>
+    <script src="//registry.origami.ft.com/embedapi?autoload=resize"></script>
 </body>
 </html>
