--- a/demos/georgia-italic.html
+++ b/demos/georgia-italic.html
@@ -4,7 +4,7 @@
 <!--[if gt IE 8]><!--> <html class="o-hoverable-on"> <!--<![endif]-->
 <head>
     <meta charset="utf-8" />
-    <title>o-fonts: Clarion demo</title>
+    <title>o-fonts: georgia-italic demo</title>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <style>body { margin: 0; }.demo-js .o--if-nojs { display: none; }</style>
     <link rel="stylesheet" href="/bundles/css?modules=o-fonts:/demos/src/demo.scss" />
@@ -12,12 +12,12 @@
 <body class="">
     <script>(function(d) {var b = d.getElementsByTagName('body')[0];b.className = b.className + ' demo-js';})(document);</script>
     
-    <div class="demo-container demo-family-Clarion">
+    <div class="demo-container demo-georgia-italic">
 
     <div class="demo-row">
         <div class="demo-col">
-            <div class="demo-example demo-size-medium">
-                Clarion
+            <div class="demo-example demo-size-large">
+                Aa<wbr />Yy
             </div>
         </div>
         <div class="demo-col">
@@ -25,14 +25,14 @@
                 ABCDEFGHIJKLMNOPQRSTUVWXYZ<br />
                 abcdefghijklmnopqrstuvwxyz<br />
                 0123456789<br />
-                .,!?:;()&amp;%£$@-+*<br />
-                Normal <strong>strong</strong>, normal <em>emphasis</em>.
+                .,!?:;()&amp;%£$@-+*
             </div>
         </div>
     </div>
 
 </div>
+
     
-    <script src='http://registry.origami.ft.com/embedapi?autoload=resize'></script>
+    <script src="//registry.origami.ft.com/embedapi?autoload=resize"></script>
 </body>
 </html>
