--- a/demos/georgia-normal.html
+++ b/demos/georgia-normal.html
@@ -4,7 +4,7 @@
 <!--[if gt IE 8]><!--> <html class="o-hoverable-on"> <!--<![endif]-->
 <head>
     <meta charset="utf-8" />
-    <title>o-fonts: clarion-normal demo</title>
+    <title>o-fonts: georgia-normal demo</title>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <style>body { margin: 0; }.demo-js .o--if-nojs { display: none; }</style>
     <link rel="stylesheet" href="/bundles/css?modules=o-fonts:/demos/src/demo.scss" />
@@ -12,7 +12,7 @@
 <body class="">
     <script>(function(d) {var b = d.getElementsByTagName('body')[0];b.className = b.className + ' demo-js';})(document);</script>
     
-    <div class="demo-container demo-clarion-normal">
+    <div class="demo-container demo-georgia-normal">
 
     <div class="demo-row">
         <div class="demo-col">
@@ -33,6 +33,6 @@
 </div>
 
     
-    <script src='http://registry.origami.ft.com/embedapi?autoload=resize'></script>
+    <script src="//registry.origami.ft.com/embedapi?autoload=resize"></script>
 </body>
 </html>
